--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "dotenv": "^14.3.0",
     "express": "^4.17.2",
